--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
   <img src="https://i.ibb.co/Tg7tyCG/516515.png" alt="Profile" class="profile">
   
   <h1>51GAME CODES</h1>
+  <h2>Click any codes and copy automatically</h2>
 
   <div class="code-item" onclick="copyToClipboard('3361B60E06CE18FC01EFFFD9A2BD91D8')">
     <span class="gift-icon">🎁</span>₹20 → Recharge ₹100<br>
