--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>51GAME CODES</title>
+  <title>CODIGO BRA </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -23,7 +22,7 @@
       height: 100px;
       border-radius: 50%;
       margin: 0 auto 20px;
-      border: 3px solid #007bff;
+      border: 3px solid #FF0000;
     }
     h1 {
       font-size: 24px;
@@ -32,7 +31,7 @@
     .code-item {
       margin: 10px 0;
       padding: 15px;
-      border: 2px solid #007bff;
+      border: 2px solid #FF0000;
       border-radius: 8px;
       background-color: #fff;
       color: #333;
@@ -41,7 +40,7 @@
       transition: transform 0.2s ease, background-color 0.3s ease;
     }
     .code-item:hover {
-      background-color: #007bff;
+      background-color: #FF0000;
       color: white;
       transform: scale(1.02);
     }
@@ -88,53 +87,58 @@
 <body>
 
 <div class="container">
-  <!-- Profile Image -->
-  <img src="https://i.ibb.co/Tg7tyCG/516515.png" alt="Profile" class="profile">
+  <!-- Responsive Rectangular Profile Image -->
+  <h3>- - -</h3>
+  <h1>CÓDIGOS DE PRESENTE POPBRA</h1>
   
-  <h1>51GAME CODES</h1>
-  <h2>Click any codes and copy automatically</h2>
+  <img src="https://i.ibb.co/5M8PRTx/1.png" alt="Profile" class="profile">
+  
+  <h3>CLIQUE NOS CÓDIGOS PARA COPIÁ-LOS AUTOMATICAMENTE</h3>
 
-  <div class="code-item" onclick="copyToClipboard('686D0112C3E7998FF74209D0F0C21AD6')">
-    <span class="gift-icon">🎁</span>₹20 → Recharge ₹100<br>
-    686D0112C3E7998FF74209D0F0C21AD6
+  <!-- Code Items -->
+  <div class="code-item" onclick="copyToClipboard('B7EE3F67F061B696ACA04118FE9DF882')">
+    <span class="gift-icon">🎁</span>R$ 1 → Recarregue R$ 20<br>
+    B7EE3F67F061B696ACA04118FE9DF882
   </div>
-  <div class="code-item" onclick="copyToClipboard('71856ABB1D54AD2EA4B03757DD3786EF')">
-    <span class="gift-icon">🎁</span>₹30 → Recharge ₹500<br>
-    71856ABB1D54AD2EA4B03757DD3786EF
+  <div class="code-item" onclick="copyToClipboard('8D0AF84C017F456E111C61F4773AB91D')">
+    <span class="gift-icon">🎁</span>R$ 2 → Recarregue R$50<br>
+    8D0AF84C017F456E111C61F4773AB91D
   </div>
-  <div class="code-item" onclick="copyToClipboard('92F818D62453A455AB7BA5B1D5706A79')">
-    <span class="gift-icon">🎁</span>₹50 → Recharge ₹1000<br>
-    92F818D62453A455AB7BA5B1D5706A79
+  <div class="code-item" onclick="copyToClipboard('95F00D2584E7A4FD7E150D56D7A550BF')">
+    <span class="gift-icon">🎁</span>R$ 3 → Recarregue R$ 100<br>
+    95F00D2584E7A4FD7E150D56D7A550BF
   </div>
-  <div class="code-item" onclick="copyToClipboard('5A67800A226EB984B1C98D590FBEA209')">
-    <span class="gift-icon">🎁</span>₹100 → Recharge ₹3000<br>
-    5A67800A226EB984B1C98D590FBEA209
+  <div class="code-item" onclick="copyToClipboard('E1191F05677BBAF3DEC9B237EBBD57FA')">
+    <span class="gift-icon">🎁</span>R$ 10 → Recarregue R$ 300<br>
+    E1191F05677BBAF3DEC9B237EBBD57FA
   </div>
-  <div class="code-item" onclick="copyToClipboard('F031EF45FA4B9D54176AC4FED04771C0')">
-    <span class="gift-icon">🎁</span>₹500 → Recharge ₹10000<br>
-    F031EF45FA4B9D54176AC4FED04771C0
+  <div class="code-item" onclick="copyToClipboard('BBA89AE32EDB825826FEFBBD8BDE173D')">
+    <span class="gift-icon">🎁</span>R$ 15 → Recarregue R$ 500<br>
+    BBA89AE32EDB825826FEFBBD8BDE173D
   </div>
-  <div class="code-item" onclick="copyToClipboard('907C07747ECD185E256813E1122ABFEA')">
-    <span class="gift-icon">🎁</span>₹1000 → Recharge ₹20000<br>
-    907C07747ECD185E256813E1122ABFEA
+  <div class="code-item" onclick="copyToClipboard('3C29F1CE65EA66B95E004746E4221C54')">
+    <span class="gift-icon">🎁</span>R$ 30 → Recarregue R$ 1000<br>
+    3C29F1CE65EA66B95E004746E4221C54
   </div>
-  <div class="code-item" onclick="copyToClipboard('1DD9334E26343F6EA7EBB6C39F6D9267')">
-    <span class="gift-icon">🎁</span>₹1500 → Recharge ₹50000<br>
-    1DD9334E26343F6EA7EBB6C39F6D9267
+  <div class="code-item" onclick="copyToClipboard('1F38640C6F89B725FDE859E0C69EF78F')">
+    <span class="gift-icon">🎁</span>R$ 100  → Recarregue R$ 3000<br>
+    1F38640C6F89B725FDE859E0C69EF78F
   </div>
-  <div class="code-item" onclick="copyToClipboard('60C830AAF65A70AD3E34F7D681BBC48B')">
-    <span class="gift-icon">🎁</span>₹3000 → Recharge ₹100000<br>
-    60C830AAF65A70AD3E34F7D681BBC48B
+  <div class="code-item" onclick="copyToClipboard('604CF7FF20AF45D0DDBEF9462CC1039E')">
+    <span class="gift-icon">🎁</span>R$ 150 → Recarregue R$ 5000<br>
+    604CF7FF20AF45D0DDBEF9462CC1039E
   </div>
-  <div class="code-item" onclick="copyToClipboard('131EE05F6A2E90CF6BE42721AF91A7A7')">
-    <span class="gift-icon">🎁</span>Super Value Gift Code: → Recharge ₹200<br>
-    131EE05F6A2E90CF6BE42721AF91A7A7
-
-    
+  <div class="code-item" onclick="copyToClipboard('A93CCFC57D0B09035E0AF88A4AE068BF')">
+    <span class="gift-icon">🎁</span>R$ 300 → Recarregue R$ 10000<br>
+    A93CCFC57D0B09035E0AF88A4AE068BF
+  </div>
+  <div class="code-item" onclick="copyToClipboard('8F86A6234562F35A5185562251E32D45')">
+    <span class="gift-icon">🎁</span>R$ 1000 → Recarregue R$ 30000<br>
+    8F86A6234562F35A5185562251E32D45
   </div>
 
   <div class="note">
-    CLICK TO DIRECTLY COPY THE CODE!
+    CLIQUE NOS CÓDIGOS PARA COPIÁ-LOS AUTOMATICAMENTE
   </div>
 </div>
 
